fix z-index

--- a/file-uploads/app/src/App.css
+++ b/file-uploads/app/src/App.css
@@ -130,7 +130,7 @@ input[type='file'] {
   text-align: left;
   padding: 1rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  z-index: 10;
+  z-index: 20;
 }
 
 pre {
